re-evaluated ideas and brainstormed some questions

--- a/project_proposal.ipynb
+++ b/project_proposal.ipynb
@@ -15,28 +15,9 @@
    "metadata": {},
    "source": [
     "### Introduction\n",
-    "For our project, we have chosen the dataset User Knowledge, by Hamdi tolga Kahraman. This dataset is composed of six distinct variables: STG, SCG, STR, LPR, PEG, and UNS.\n",
-    "* STG represents the degree of study time for goal object materials\n",
-    "* SCG represents the degree of repetition for goal object materials\n",
-    "* STR represents the degree of study time of user for related objects with goal object\n",
-    "* LPR represents the exam preformance of user for related object with goal object\n",
-    "* PEG represents the exam preformance of user for goal object\n",
-    "* UNS represents the knowledge level of the user\n",
-    "\n",
-    "**UNS is one of 4 categories**\n",
-    "* Very Low\n",
-    "* Low\n",
-    "* Middle\n",
-    "* High \n",
-    "\n",
-    "**All data is scaled out of 1**\n",
-    "\n",
-    "General data logistics:\n",
-    "* Total Number of Instances: 403\n",
-    "* Area: Education\n",
-    "* Attribute Characteristics: Real\n",
-    "* Number of Attributes: 5\n",
-    "* Associated Tasks: Classification"
+    "ideas: \n",
+    "* Maybe tennis dataset? We can ask questions like: \"at which age are most players in their prime?\", \"does height give an advantage? If so, what is the optimal height?\"\n",
+    "* or user knowledge dataset? We can ask questions like: \"what is the minimum number of 1 hours study sessions that a student would need to do in order to pass the exam?\""
    ]
   },
   {
@@ -44,15 +25,51 @@
    "id": "ef043b7e-ec72-4de1-bf7e-efab6e9cb932",
    "metadata": {},
    "source": [
-    "### Reading the dataset into R"
+    "### Preliminary Exploratory Data Analysis"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "id": "716059ad-d65b-48be-8047-75041590a23c",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "── \u001b[1mAttaching packages\u001b[22m ─────────────────────────────────────── tidyverse 1.3.1 ──\n",
+      "\n",
+      "\u001b[32m✔\u001b[39m \u001b[34mggplot2\u001b[39m 3.3.6     \u001b[32m✔\u001b[39m \u001b[34mpurrr  \u001b[39m 0.3.4\n",
+      "\u001b[32m✔\u001b[39m \u001b[34mtibble \u001b[39m 3.1.7     \u001b[32m✔\u001b[39m \u001b[34mdplyr  \u001b[39m 1.0.9\n",
+      "\u001b[32m✔\u001b[39m \u001b[34mtidyr  \u001b[39m 1.2.0     \u001b[32m✔\u001b[39m \u001b[34mstringr\u001b[39m 1.4.0\n",
+      "\u001b[32m✔\u001b[39m \u001b[34mreadr  \u001b[39m 2.1.2     \u001b[32m✔\u001b[39m \u001b[34mforcats\u001b[39m 0.5.1\n",
+      "\n",
+      "── \u001b[1mConflicts\u001b[22m ────────────────────────────────────────── tidyverse_conflicts() ──\n",
+      "\u001b[31m✖\u001b[39m \u001b[34mdplyr\u001b[39m::\u001b[32mfilter()\u001b[39m masks \u001b[34mstats\u001b[39m::filter()\n",
+      "\u001b[31m✖\u001b[39m \u001b[34mdplyr\u001b[39m::\u001b[32mlag()\u001b[39m    masks \u001b[34mstats\u001b[39m::lag()\n",
+      "\n",
+      "── \u001b[1mAttaching packages\u001b[22m ────────────────────────────────────── tidymodels 1.0.0 ──\n",
+      "\n",
+      "\u001b[32m✔\u001b[39m \u001b[34mbroom       \u001b[39m 1.0.0     \u001b[32m✔\u001b[39m \u001b[34mrsample     \u001b[39m 1.0.0\n",
+      "\u001b[32m✔\u001b[39m \u001b[34mdials       \u001b[39m 1.0.0     \u001b[32m✔\u001b[39m \u001b[34mtune        \u001b[39m 1.0.0\n",
+      "\u001b[32m✔\u001b[39m \u001b[34minfer       \u001b[39m 1.0.2     \u001b[32m✔\u001b[39m \u001b[34mworkflows   \u001b[39m 1.0.0\n",
+      "\u001b[32m✔\u001b[39m \u001b[34mmodeldata   \u001b[39m 1.0.0     \u001b[32m✔\u001b[39m \u001b[34mworkflowsets\u001b[39m 1.0.0\n",
+      "\u001b[32m✔\u001b[39m \u001b[34mparsnip     \u001b[39m 1.0.0     \u001b[32m✔\u001b[39m \u001b[34myardstick   \u001b[39m 1.0.0\n",
+      "\u001b[32m✔\u001b[39m \u001b[34mrecipes     \u001b[39m 1.0.1     \n",
+      "\n",
+      "── \u001b[1mConflicts\u001b[22m ───────────────────────────────────────── tidymodels_conflicts() ──\n",
+      "\u001b[31m✖\u001b[39m \u001b[34mscales\u001b[39m::\u001b[32mdiscard()\u001b[39m masks \u001b[34mpurrr\u001b[39m::discard()\n",
+      "\u001b[31m✖\u001b[39m \u001b[34mdplyr\u001b[39m::\u001b[32mfilter()\u001b[39m   masks \u001b[34mstats\u001b[39m::filter()\n",
+      "\u001b[31m✖\u001b[39m \u001b[34mrecipes\u001b[39m::\u001b[32mfixed()\u001b[39m  masks \u001b[34mstringr\u001b[39m::fixed()\n",
+      "\u001b[31m✖\u001b[39m \u001b[34mdplyr\u001b[39m::\u001b[32mlag()\u001b[39m      masks \u001b[34mstats\u001b[39m::lag()\n",
+      "\u001b[31m✖\u001b[39m \u001b[34myardstick\u001b[39m::\u001b[32mspec()\u001b[39m masks \u001b[34mreadr\u001b[39m::spec()\n",
+      "\u001b[31m✖\u001b[39m \u001b[34mrecipes\u001b[39m::\u001b[32mstep()\u001b[39m   masks \u001b[34mstats\u001b[39m::step()\n",
+      "\u001b[34m•\u001b[39m Dig deeper into tidy modeling with R at \u001b[32mhttps://www.tmwr.org\u001b[39m\n",
+      "\n"
+     ]
+    }
+   ],
    "source": [
     "library(tidyverse)\n",
     "library(repr)\n",
@@ -62,36 +79,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
-   "id": "1cd6f0c7-ffab-4b62-86e8-438e505a4c22",
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "\u001b[1m\u001b[22mNew names:\n",
-      "\u001b[36m•\u001b[39m `` -> `...7`\n",
-      "\u001b[36m•\u001b[39m `` -> `...8`\n",
-      "\u001b[1m\u001b[22mNew names:\n",
-      "\u001b[36m•\u001b[39m `` -> `...7`\n",
-      "\u001b[36m•\u001b[39m `` -> `...8`\n"
-     ]
-    }
-   ],
-   "source": [
-    "train_data <- read_excel(\"data/user_knowledge_data.xls\", sheet = 2) |>\n",
-    "    select(STG, SCG, STR, LPR, PEG, UNS) |>\n",
-    "    mutate(UNS = as_factor(UNS))\n",
-    "test_data <- read_excel(\"data/user_knowledge_data.xls\", sheet = 3) |>\n",
-    "    select(STG, SCG, STR, LPR, PEG, UNS) |>\n",
-    "    mutate(UNS = as_factor(UNS))"
-   ]
-  },
-  {
-   "cell_type": "code",
    "execution_count": null,
-   "id": "7239cfc7-03ca-4fa9-9db1-4d13d610178b",
+   "id": "ff25c82a-6599-45b6-a5aa-d19fcf5fdbd0",
    "metadata": {},
    "outputs": [],
    "source": []
