testing to see if works.

--- a/project_proposal.ipynb
+++ b/project_proposal.ipynb
@@ -17,7 +17,8 @@
     "### Introduction\n",
     "ideas: \n",
     "* Maybe tennis dataset? We can ask questions like: \"at which age are most players in their prime?\", \"does height give an advantage? If so, what is the optimal height?\"\n",
-    "* or user knowledge dataset? We can ask questions like: \"what is the minimum number of 1 hours study sessions that a student would need to do in order to pass the exam?\""
+    "* or user knowledge dataset? We can ask questions like: \"what is the minimum number of 1 hours study sessions that a student would need to do in order to pass the exam?\"\n",
+    "*this is a sentence."
    ]
   },
   {
