Fixed spelling again

--- a/project_proposal.ipynb
+++ b/project_proposal.ipynb
@@ -27,7 +27,7 @@
     "    * 2 = Atypical Angina\n",
     "    * 3 = Non-aginal Pain\n",
     "    * 4 = Asymptomatic\n",
-    "* Blood preassure (trestbps) - mm Hg\n",
+    "* Blood pressure (trestbps) - mm Hg\n",
     "* Serum cholesterol (chol) - mg/dl\n",
     "* Fasting blood sugar > 120 mg/dl (fbs) - true or false\n",
     "* Resting ECG results (restecg)\n",
@@ -38,7 +38,7 @@
     "* Excercize induced agina (exang)\n",
     "    * 0 = No\n",
     "    * 1 = Yes\n",
-    "* Depression induced by excercize related to rest (oldpeak)\n",
+    "* Depression induced by excercise related to rest (oldpeak)\n",
     "* Slope of the peake excercise segment (slope)\n",
     "* Number of major vessels (ca)\n",
     "* Condition (thal)\n",
