Fixed spelling again again

--- a/project_proposal.ipynb
+++ b/project_proposal.ipynb
@@ -35,11 +35,11 @@
     "    * 1 = Abnormal\n",
     "    * 2 = Probable or definite left ventricular hypertrophy\n",
     "* Maximum heart rate achieved (thalach) - bpm\n",
-    "* Excercize induced agina (exang)\n",
+    "* Exercise induced agina (exang)\n",
     "    * 0 = No\n",
     "    * 1 = Yes\n",
-    "* Depression induced by excercise related to rest (oldpeak)\n",
-    "* Slope of the peake excercise segment (slope)\n",
+    "* Depression induced by exercise related to rest (oldpeak)\n",
+    "* Slope of the peake exercise segment (slope)\n",
     "* Number of major vessels (ca)\n",
     "* Condition (thal)\n",
     "    * 3 = Normal\n",
@@ -583,7 +583,7 @@
     "oldpeak_visualization <- training_data |>\n",
     "    ggplot(aes(x = oldpeak)) +\n",
     "    geom_histogram(position = \"identity\") +\n",
-    "    labs(x = \"Depression Induced by Excercise\", y = \"Count\") +\n",
+    "    labs(x = \"Depression Induced by Exercise\", y = \"Count\") +\n",
     "    ggtitle(\"Depression Distribution\") +\n",
     "    theme(text = element_text(size = 15))\n",
     "data_visualization <- plot_grid(age_visualization, trestbps_visualization, chol_visualization, thalach_visualization, oldpeak_visualization, ncol = 1)\n",
