Added written introduction and expected outcomes/significance from google doc

--- a/project_proposal.ipynb
+++ b/project_proposal.ipynb
@@ -16,7 +16,7 @@
    "source": [
     "### Introduction\n",
     "\n",
-    "For our DSCI 100 Project, our group will be using the data found in the \"processed.cleveland.data\" file in the Heart Disease dataset directory. This dataset is composed of 14 fields:\n",
+    "The Heart Disease dataset we will be analysing contains 14 attributes of 303 patients. We will be using the data found in the “processed.cleveland.data” file in the Heart Disease dataset directory. The attributes comprise parts of each patient’s health report, as well as their diagnosis of heart disease. Using this data, we will be answering which factors within the health report are the most influential in predicting the detection of heart disease in patients. \n",
     "\n",
     "* Age of patient (age) - years\n",
     "* Sex of the patient (sex)\n",
@@ -46,11 +46,9 @@
     "    * 6 = fixed defect\n",
     "    * 7 = reversable defect\n",
     "* Diagnosis of heart disease (num)\n",
-    "    * idk what the numbers mean\n",
+    "    * num = severity or existence of heart disease\n",
     "    \n",
-    "These fields are parts of a patient's health report, so they can be used to predict the severity or existence of heart disease within a patient, which is what variable **num** represents.\n",
-    "\n",
-    "The question that we will be exploring is: **Which factors are most influential towards the cause of heart disease?**"
+    "Our question: **Which factors within the health report are the most influential in predicting the detection of heart disease in patients?**"
    ]
   },
   {
@@ -619,15 +617,7 @@
    "id": "2f3fc3a0-2385-4acf-a050-153e01b1654b",
    "metadata": {},
    "source": [
-    "What do we expect to find?\n",
-    "* All of the predictor variables that we used are important/influencial to determining if a patient has heart disease\n",
-    "Impacts of our findings:\n",
-    "* If our model is fairly good, then we can predict if a patient has a disease so that they may seek help immediately.\n",
-    "* However, our model will undoubtedly be less than 100% accurate, so instead of it being a complete scientific diagnosis, it can act as an indicator for concern (spark suspicion concerning the patient's health).\n",
-    "Future questions?\n",
-    "* What other variables could increase the accuracy of this model?\n",
-    "* Can this model be used to predict other health problems?\n",
-    "* How can we incorporate categoric variables into a prediction model? "
+    "After our data analysis, we expect to find if all of the predictors that we used are influential in determining if a patient has heart disease. If our model is accurate, then we can predict if a patient has heart disease, and thus they can seek help promptly. However, even if our model is not accurate enough, this can still be used to speculate if there is a chance they have heart disease and be used to refer the patients for further examination such as X-rays, MRI scans, electrocardiogram etc. In the future, we can incorporate other types of variables, such as categorical ones included in our data set (eg. Chest pain type, Condition, Resting ECG results), which could make our model even more precise for predicting heart disease diagnosis. Also, as more relevant data is collected, we can add additional variables to our data set that can also be considered in our prediction model. Also, we might be able to find ways to use this model to predict other health problems.\n"
    ]
   },
   {
