copy pasted in the method from the goodle doc

--- a/project_proposal.ipynb
+++ b/project_proposal.ipynb
@@ -595,13 +595,10 @@
    "source": [
     "### Methods\n",
     "\n",
-    "How will we conduct our data analysis?\n",
-    "* Include prediciton/classification\n",
-    "* Analyze the behaviour of each variable\n",
-    "* Create a prediction model based on the information above\n",
-    "    * Evaluate the accuracy: If it is fairly accurate then those variables are the answer to our main question!\n",
-    "* Use visualizations! Maybe just 1 or 2?\n",
-    "    * I think we should visualize the data for the actual training data, and then on the same plot visualize what our prediction model predicts to compare the differences (hopefully its not that different)"
+    "First, we will use our training dataset to train our classification model. Then we will predict the variable \"num\" using the predictor variables listed in the preceding tables (heart disease diagnosis). Cross-validation will be used to determine the accuracy for multiple \"k\" values.\n",
+    "Following that, we will plot the \"k\" values against their accuracy and select the best value.\n",
+    "subsequently, we can test our model with the testing set, where we will be using a 75% split for training and a 25% split for testing data, and then we can evaluate the accuracy of our model. We can create a graph that compares the predicted data from our model to the actual testing data.\n",
+    "We can conclude the significance of our model and its potential implications in the real world.\n"
    ]
   },
   {
