--- a/project_proposal.ipynb
+++ b/project_proposal.ipynb
@@ -590,7 +590,7 @@
    "source": [
     "### Methods\n",
     "\n",
-    "To answer our question, we will first need to choose our predictor variables. Out of the 5 continuous variables that we have, we can see that all of them have a variation in mean depending on the diagnosis, so we can choose our predictor variables to be the other four. Next, we will use our training dataset (75% of original data) to train our classification model in combination with cross validation to find the accuracy for multiple $k$ values that are used in the nearest neighbor algorithm. Afterwards, we will plot the values against their accuracy and select the most accurate $k$ and then use the test set to evaluate the model. Finally, we will visualize the actual data of the testing set and compare it to a graph of the predicted results of the testing set so that our findings can be visualized and further understood.\n"
+    "To answer our question, we will first need to choose our predictor variables. Out of the 5 continuous variables that we have, we can see that all of them have a variation in mean depending on the diagnosis, so we can choose these variables to be our predictors. Next, we will use our training dataset (75% of original data) to train our classification model in combination with cross validation to find the accuracy for multiple $k$ values that are used in the nearest neighbor algorithm. Afterwards, we will plot the values against their accuracy and select the most accurate $k$ and then use the test set to evaluate the model. Finally, we will visualize the actual data of the testing set and compare it to a graph of the predicted results of the testing set so that our findings can be visualized and further understood.\n"
    ]
   },
   {
