spelling mistake aslfja;fd

--- a/group_59_report.ipynb
+++ b/group_59_report.ipynb
@@ -549,9 +549,9 @@
    "metadata": {},
    "source": [
     "* By utilizing `ggplot()` and `geom_boxplot()`, we can visualize the range of values between each predictor variable.\n",
-    "* We can see that for this specific train/testing split, our training data resulted in the variables `age`, `thalach`, and `oldpeak` varying the most across different diagnoses.\n",
+    "* We can see that for this specific train/testing split, our training data resulted in the variables `age`, `thalach`, `trestbps` and `oldpeak` varying the most across different diagnoses.\n",
     "    * This means that they may have a significant impact on the diagnosis of a patient.\n",
-    "* However, this may be a seed-dependant result, as the randomness may have made the variables `trestbps` and `chol` seem constant in values across different diagnoses.\n",
+    "* However, this may be a seed-dependant result, as the randomness may have made the variable `chol` seem constant in values across different diagnoses.\n",
     "    * We must conduct further investigation on their impacts on the diagnosis of a patient."
    ]
   },
