--- a/group_59_report.ipynb
+++ b/group_59_report.ipynb
@@ -1125,13 +1125,20 @@
     "    * Only one correct prediction was made on a patient with a heat disease of magnitude 2.\n",
     "* This may be because our dataset is composed mostly by patients who do not have heart disease, so our model may be bias towards a `num` class of 0.\n",
     "\n",
-    "\n",
     "1800 WORDS UP TO HERE"
    ]
   },
   {
    "cell_type": "markdown",
    "id": "68fc1a63-b54c-482f-8c63-9279900042d2",
+   "metadata": {},
+   "source": [
+    "## Discussion"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "490adcfb-436a-48df-ab18-4f29ef3dff04",
    "metadata": {},
    "source": [
     "* Recap our results (don't go to in depth on the methods)\n",
