--- a/group_59_report.ipynb
+++ b/group_59_report.ipynb
@@ -63,8 +63,12 @@
     "    * 0 = No\n",
     "    * 1 = Yes\n",
     "* Depression induced by exercise related to rest (oldpeak)\n",
-    "* Slope of the peake exercise segment (slope)\n",
+    "* Slope of the peak exercise segment (slope)\n",
+    "    * 1 = Unsloping\n",
+    "    * 2 = Flat\n",
+    "    * 3 = Downsloping\n",
     "* Number of major vessels (ca)\n",
+    "    * Values from 0-3\n",
     "* Condition (thal)\n",
     "    * 3 = Normal\n",
     "    * 6 = fixed defect\n",
@@ -72,7 +76,7 @@
     "* Diagnosis of heart disease (num)\n",
     "    * num = severity or existence of heart disease (0 means non-existent)\n",
     "\n",
-    "We will be using only variables of type double as our predictors. This includes age of patient, blood pressure, cholesterol, maximum heart rate achieved, depression induced by exercise related to rest, and finally diagnosis of heart disease. \n"
+    "We can see that many of the dataset's attributes are categoric variables, so we will need to remove them in order to use only variables of type double as our predictors. This includes age of patient, blood pressure, cholesterol, maximum heart rate achieved, and depression induced by exercise related to rest to predict the finally diagnosis of heart disease. \n"
    ]
   },
   {
@@ -1144,7 +1148,19 @@
     "* Recap our results (don't go to in depth on the methods)\n",
     "* Talk about how we somewhat expected these accuracy results because we had to eliminate many possible predictor variable as a result of their datatypes\n",
     "* Some ways of improvement\n",
-    "* Questions looking forward"
+    "* Questions looking forward\n",
+    "\n",
+    "In our analysis in sections 3 revealed that age, maximum heart rate, and depression were the leading factors out to heart disease (from the data that we were able to analyze). Out of these predictors, Table 4.1 revealed that using all three of them would lead to the most accurate model, and that model resulted with a 54% accuracy on the testing dataset. According to the Cetner for Disease Control and Prevention, low physical activity is a major cause of heart disease, which directly relates to our variables `oldpeak`, `age`, and `thalach`. However, they also state that cholesterol levels are important in determining heart disease as well, but our testing set showed little varience in cholesterol levels over the diagnoses. This may mean that our training set may not be the best representation of the world population, possibly due to the sample size or sampling bias.\n",
+    "\n",
+    "Our accuracy result was to be expected, as we had to cut out many variables that could increase our accuracy because of their datatypes not being continuous. In addition, our model predicted most of the testing set patients to be disease-free, even if they truly did have heart disease. This may be a result of our training set being composed of mostly `num` values of 0 as seen in Table 3.1, and also because the predictor means accross different `num` only differed slightly (Table 3.2). Knowing this, our model's implimentations in the real world may be limitted, since profesional diagnoses must be made with extreme certainty. Our model may only be useful in areas such as preliminary speculation on if someone has a disease, as accuracy may not be life threatening in the early phases of diagnosis. If the categoric variables in the dataset were to be converted to continuous ones, then our implications would change as a result of a higher possible accuracy. In addition, collecting more data on other patient health habits such as smoke consumption may be able to bring our model into the professional environment, as our model would become more specific in data that it needs which profesionals would be able to provide, and therefore, result in more accurate diagnoses.\n",
+    "\n",
+    "Some questions for the future of this research:\n",
+    "\n",
+    "* Can our model be converted into one that predicts other diseases such as cancer and AIDS?\n",
+    "* How will our model react to introductions of vaccines and cures?\n",
+    "    * How frequent would our model have to be re-trained?\n",
+    "* Can different models be made to suit different degrees of diagnoses?\n",
+    "    * Can we make reliable models that are cheaper to train for small medical clinics, and also reliable, high-accuracy yet expensive models for professionals?"
    ]
   },
   {
