--- a/group_59_report.ipynb
+++ b/group_59_report.ipynb
@@ -154,7 +154,7 @@
       "\u001b[31m✖\u001b[39m \u001b[34mdplyr\u001b[39m::\u001b[32mlag()\u001b[39m      masks \u001b[34mstats\u001b[39m::lag()\n",
       "\u001b[31m✖\u001b[39m \u001b[34myardstick\u001b[39m::\u001b[32mspec()\u001b[39m masks \u001b[34mreadr\u001b[39m::spec()\n",
       "\u001b[31m✖\u001b[39m \u001b[34mrecipes\u001b[39m::\u001b[32mstep()\u001b[39m   masks \u001b[34mstats\u001b[39m::step()\n",
-      "\u001b[34m•\u001b[39m Dig deeper into tidy modeling with R at \u001b[32mhttps://www.tmwr.org\u001b[39m\n",
+      "\u001b[34m•\u001b[39m Learn how to get started at \u001b[32mhttps://www.tidymodels.org/start/\u001b[39m\n",
       "\n"
      ]
     }
@@ -285,6 +285,7 @@
     "    mutate(fbs = as.logical(fbs))\n",
     "patient_data_specified <- patient_data_refactored |>\n",
     "    select(-sex, -cp, -restecg, -fbs, -exang, -slope, -ca, -thal)\n",
+    "# output the number of NA values\n",
     "patient_data <- patient_data_specified |>\n",
     "    na.omit()\n",
     "patient_data"
@@ -415,7 +416,7 @@
    "source": [
     "* By using `group_by()` with `num` as its parameter, and `summarize()` with `n = n()` as its parameter, a tibble the contains the number of instances for each `num` type is created.\n",
     "    * It is important to remember that we are only summarizing variables that are possible predictors.\n",
-    "* We can see here that most of our training data (around 55%) is composed of patients that do not have heart disease, which is a good reflection of real-world situations where heart disease is not a frequent diagnosis.\n",
+    "* We can see here that most of our training data (around 55%) is composed of patients that do not have heart disease, so it has a much higher ratio within the training set compared to the other diagnoses.\n",
     "* The number of instances also appears to decrease as the severity of the diagnosis increases, which entails that severe heart diseases occurs less in patients."
    ]
   },
@@ -593,9 +594,9 @@
    "metadata": {},
    "source": [
     "* By utilizing `ggplot()` and `geom_boxplot()`, we can visualize the range of values between each predictor variable.\n",
-    "* We can see that for this specific train/testing split, our training data resulted in the variables `age` (age), `thalach` (maximum heart rate), and `oldpeak` (depression) varying the most across different diagnoses.\n",
+    "* We can see that for this specific train/testing split, our training data resulted in the variables `age` (age), `thalach` (maximum heart rate), and `oldpeak` (depression) varying in range and median the most across different diagnoses.\n",
     "    * This means that they may have a significant impact on the diagnosis of a patient, and should be chosen as our predictor variables to test.\n",
-    "* Cholesteral and Blood Preassure appear to stay constant, especially in mean, across different diagnoses.\n",
+    "* Cholesteral and Blood Preassure appear to stay relatively constant, especially in median, across different diagnoses.\n",
     "    * This means that they have little impact on the diagnosis of a patient, so they would be of little use to our final model.\n",
     "\n",
     "#### The predictor variables that we will test are: `age`, `thalach`, and `oldpeak`."
@@ -873,7 +874,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 13,
    "id": "749ee57d-5611-4af8-a264-a8e844f74002",
    "metadata": {},
    "outputs": [
@@ -990,6 +991,7 @@
     "    add_recipe(ato_recipe) |>\n",
     "    add_model(best_knn_spec) |>\n",
     "    fit(data = patient_training)\n",
+    "\n",
     "print(\"Figure 5.2: Final Classification Model\")\n",
     "patient_fit"
    ]
@@ -1071,13 +1073,14 @@
     "    metrics(truth = num, estimate = .pred_class) |>\n",
     "    select(.metric, .estimate) |>\n",
     "    head(1)\n",
+    "\n",
     "print(\"Table 6.1: Model Accuracy on the Testing Set\")\n",
     "patient_acc"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 16,
    "id": "7fe48aa8-bf46-4ae0-b3bf-4e013435d65e",
    "metadata": {},
    "outputs": [
@@ -1126,10 +1129,84 @@
    "source": [
     "* From Figure 6.2, we can see that our model had a prediction accuracy of 54% when classifying the observations of the testing set.\n",
     "* However, we can see that almost all of the correct predictions were made on patients that did not have heart disease.\n",
-    "    * Only one correct prediction was made on a patient with a heat disease of magnitude 2.\n",
-    "* This may be because our dataset is composed mostly by patients who do not have heart disease, so our model may be bias towards a `num` class of 0.\n",
-    "\n",
-    "1800 WORDS UP TO HERE"
+    "    * Only one correct prediction was made on a patient with a heart disease of magnitude 2.\n",
+    "    * This may be because our dataset is composed mostly by patients who do not have heart disease, so our model may be overfit with the large number of `num = 0` instances.\n",
+    "* In addition, if we look at Table 3.2 again below, we can see that the means of the predictor values are relatively similar, so our model may have trouble distinguishing observations and produce `num = 0` as a result of the overfitting."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "id": "0a9bf4ed-af28-449d-a546-401b0840693b",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[1] \"Table 3.2\"\n"
+     ]
+    },
+    {
+     "data": {
+      "text/html": [
+       "<table class=\"dataframe\">\n",
+       "<caption>A tibble: 5 × 6</caption>\n",
+       "<thead>\n",
+       "\t<tr><th scope=col>num</th><th scope=col>mean_age</th><th scope=col>mean_trestbps</th><th scope=col>mean_chol</th><th scope=col>mean_thalach</th><th scope=col>mean_oldpeak</th></tr>\n",
+       "\t<tr><th scope=col>&lt;fct&gt;</th><th scope=col>&lt;dbl&gt;</th><th scope=col>&lt;dbl&gt;</th><th scope=col>&lt;dbl&gt;</th><th scope=col>&lt;dbl&gt;</th><th scope=col>&lt;dbl&gt;</th></tr>\n",
+       "</thead>\n",
+       "<tbody>\n",
+       "\t<tr><td>0</td><td>53.05691</td><td>130.4390</td><td>240.6179</td><td>157.8211</td><td>0.6642276</td></tr>\n",
+       "\t<tr><td>1</td><td>55.65000</td><td>133.8250</td><td>245.9000</td><td>145.5000</td><td>0.9850000</td></tr>\n",
+       "\t<tr><td>2</td><td>57.92593</td><td>136.3333</td><td>258.1111</td><td>138.8889</td><td>1.6185185</td></tr>\n",
+       "\t<tr><td>3</td><td>56.00000</td><td>135.6000</td><td>244.7200</td><td>134.2000</td><td>1.9800000</td></tr>\n",
+       "\t<tr><td>4</td><td>58.60000</td><td>134.4000</td><td>242.4000</td><td>142.5000</td><td>2.3100000</td></tr>\n",
+       "</tbody>\n",
+       "</table>\n"
+      ],
+      "text/latex": [
+       "A tibble: 5 × 6\n",
+       "\\begin{tabular}{llllll}\n",
+       " num & mean\\_age & mean\\_trestbps & mean\\_chol & mean\\_thalach & mean\\_oldpeak\\\\\n",
+       " <fct> & <dbl> & <dbl> & <dbl> & <dbl> & <dbl>\\\\\n",
+       "\\hline\n",
+       "\t 0 & 53.05691 & 130.4390 & 240.6179 & 157.8211 & 0.6642276\\\\\n",
+       "\t 1 & 55.65000 & 133.8250 & 245.9000 & 145.5000 & 0.9850000\\\\\n",
+       "\t 2 & 57.92593 & 136.3333 & 258.1111 & 138.8889 & 1.6185185\\\\\n",
+       "\t 3 & 56.00000 & 135.6000 & 244.7200 & 134.2000 & 1.9800000\\\\\n",
+       "\t 4 & 58.60000 & 134.4000 & 242.4000 & 142.5000 & 2.3100000\\\\\n",
+       "\\end{tabular}\n"
+      ],
+      "text/markdown": [
+       "\n",
+       "A tibble: 5 × 6\n",
+       "\n",
+       "| num &lt;fct&gt; | mean_age &lt;dbl&gt; | mean_trestbps &lt;dbl&gt; | mean_chol &lt;dbl&gt; | mean_thalach &lt;dbl&gt; | mean_oldpeak &lt;dbl&gt; |\n",
+       "|---|---|---|---|---|---|\n",
+       "| 0 | 53.05691 | 130.4390 | 240.6179 | 157.8211 | 0.6642276 |\n",
+       "| 1 | 55.65000 | 133.8250 | 245.9000 | 145.5000 | 0.9850000 |\n",
+       "| 2 | 57.92593 | 136.3333 | 258.1111 | 138.8889 | 1.6185185 |\n",
+       "| 3 | 56.00000 | 135.6000 | 244.7200 | 134.2000 | 1.9800000 |\n",
+       "| 4 | 58.60000 | 134.4000 | 242.4000 | 142.5000 | 2.3100000 |\n",
+       "\n"
+      ],
+      "text/plain": [
+       "  num mean_age mean_trestbps mean_chol mean_thalach mean_oldpeak\n",
+       "1 0   53.05691 130.4390      240.6179  157.8211     0.6642276   \n",
+       "2 1   55.65000 133.8250      245.9000  145.5000     0.9850000   \n",
+       "3 2   57.92593 136.3333      258.1111  138.8889     1.6185185   \n",
+       "4 3   56.00000 135.6000      244.7200  134.2000     1.9800000   \n",
+       "5 4   58.60000 134.4000      242.4000  142.5000     2.3100000   "
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "print(\"Table 3.2\")\n",
+    "mean_per_diagonsis"
    ]
   },
   {
@@ -1145,14 +1222,9 @@
    "id": "490adcfb-436a-48df-ab18-4f29ef3dff04",
    "metadata": {},
    "source": [
-    "* Recap our results (don't go to in depth on the methods)\n",
-    "* Talk about how we somewhat expected these accuracy results because we had to eliminate many possible predictor variable as a result of their datatypes\n",
-    "* Some ways of improvement\n",
-    "* Questions looking forward\n",
+    "Our analysis in sections 3 revealed that age, maximum heart rate, and depression were the leading factors to heart disease (from the data that we were able to analyze). Out of these predictors, Table 4.1 revealed that using all three of them would lead to the most accurate model, and that model resulted with a 54% accuracy on the testing dataset. These variables are a good reflection of the real world perpetraitors of heart disease, because according to the Center for Disease Control and Prevention, low physical activity is a major cause of heart disease, which directly relates to our variables `oldpeak`, `age`, and `thalach`. However, they also state that cholesterol levels are important in determining heart disease as well, but our testing set showed little varience in cholesterol levels over the diagnoses. This may mean that our training set may not be the best representation of the world population, possibly due to the sample size or sampling biases that may have been present during the collection of our dataset.\n",
     "\n",
-    "In our analysis in sections 3 revealed that age, maximum heart rate, and depression were the leading factors out to heart disease (from the data that we were able to analyze). Out of these predictors, Table 4.1 revealed that using all three of them would lead to the most accurate model, and that model resulted with a 54% accuracy on the testing dataset. According to the Cetner for Disease Control and Prevention, low physical activity is a major cause of heart disease, which directly relates to our variables `oldpeak`, `age`, and `thalach`. However, they also state that cholesterol levels are important in determining heart disease as well, but our testing set showed little varience in cholesterol levels over the diagnoses. This may mean that our training set may not be the best representation of the world population, possibly due to the sample size or sampling bias.\n",
-    "\n",
-    "Our accuracy result was to be expected, as we had to cut out many variables that could increase our accuracy because of their datatypes not being continuous. In addition, our model predicted most of the testing set patients to be disease-free, even if they truly did have heart disease. This may be a result of our training set being composed of mostly `num` values of 0 as seen in Table 3.1, and also because the predictor means accross different `num` only differed slightly (Table 3.2). Knowing this, our model's implimentations in the real world may be limitted, since profesional diagnoses must be made with extreme certainty. Our model may only be useful in areas such as preliminary speculation on if someone has a disease, as accuracy may not be life threatening in the early phases of diagnosis. If the categoric variables in the dataset were to be converted to continuous ones, then our implications would change as a result of a higher possible accuracy. In addition, collecting more data on other patient health habits such as smoke consumption may be able to bring our model into the professional environment, as our model would become more specific in data that it needs which profesionals would be able to provide, and therefore, result in more accurate diagnoses.\n",
+    "Our accuracy result was to be expected, as we had to cut out many variables that could increase our accuracy because of their datatypes not being continuous. In addition, our model predicted most of the testing set patients to be disease-free, even if they truly did have heart disease. This may be a result of our training set being composed of mostly `num` values of 0 as seen in Table 3.1, and also because the predictor means accross different `num` only differed slightly (Table 3.2). Knowing this, our model's implimentations in the real world may be limitted, since profesional diagnoses must be made with extreme certainty. Our model may only be useful in preliminary speculation on if someone has a disease, as accuracy may not be life threatening in the early phases of diagnosis. If the categoric variables in the dataset were to be converted to continuous ones, then our implications would change as a result of a further trained model and therefore, a higher possible accuracy. In addition, collecting more data on other patient health habits such as smoke consumption may be able to bring our model into the professional environment, as our model would become more specific in data that it needs which profesionals would be able to provide, and therefore, result in highly accurate diagnoses.\n",
     "\n",
     "Some questions for the future of this research:\n",
     "\n",
